--- a/dom.html
+++ b/dom.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="headling">
-            Dom Learninig
+        <h1 id = "head" class="headling">
+            Dom Learning
         </h1>
         <p>this is paragraph</p>
     </div>
 </body>
-</html>
+</html> 
