--- a/dom.html
+++ b/dom.html
@@ -1,17 +1,63 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Learning </title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="bg-black">
-        <h1 id = "head" class="headling">
-            Dom Learning
-        </h1>
-        <p>this is paragraph</p>
-    </div>
+    <!-- <div class="parent">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+    </div> -->
 </body>
-</html> 
+<script>
+//    const parent= document.querySelector('.parent')
+//    console.log(parent)
+//    console.log(parent.children[1].innerHTML);
+   
+
+//    parent.children[2].style.backgroundColor='green'
+//    parent.children[2].style.padding='20px'
+//    console.log(parent.firstElementChild);
+//    console.log(parent.lastElementChild);
+   
+//     const day= document.querySelector(".day")
+//     console.log(day.parentElement);
+//     console.log(day.nextElementSibling);
+    
+   
+    // console.log("NODES: ", parent.childNodes);
+    
+    const div = document.createElement('div')
+    console.log(div);
+    div.className="main"
+    div.id="myid"
+    div.setAttribute("title","this is title")
+    div.innerHTML="Hello Haziq"
+    div.style.color="WHITE"
+    div.style.backgroundColor='green'
+     document.body.appendChild(div)
+
+
+
+     function dive () {
+        const div = document.createElement('div')
+    console.log(div);
+    div.className="main"
+    div.id="myid"
+    div.setAttribute("title","this is title")
+    div.innerHTML="Hello Haziq"
+    div.style.color="WHITE"
+    div.style.backgroundColor='green'
+     document.body.appendChild(div)
+    }     
+        dive();
+
+        for (let i = 0; i < 10; i++) {
+            dive();
+        }
+</script>
+</html>
